chore: Update image paths in blog posts

--- a/src/content/blog/aplicaciones-macos-2024.mdx
+++ b/src/content/blog/aplicaciones-macos-2024.mdx
@@ -5,7 +5,7 @@ description: 'En este artículo exploraremos 4 aplicaciones esenciales para desa
 contentType: 'guia'
 author: 'Aaron'
 image:
-  url: '../../assets/images/aplicaciones-macos-2024/Hero.avif'
+  url: '/aplicaciones-macos-2024/Hero.avif'
   alt: 'Banner de aplicaciones para macOS'
 tags: ['eCommerce', 'IA', 'Marketing']
 ---
@@ -18,7 +18,7 @@ Para todos los desarrolladores que trabajéis con macOS os presento una lista de
 
 ## 1. [Warp Terminal](https://app.warp.dev/referral/RVJ9PY)
 
-![Warp Terminal](../../assets/images/aplicaciones-macos-2024/Warp.avif)
+![Warp Terminal](/aplicaciones-macos-2024/Warp.avif)
 
 Warp es sin duda alguna mi terminal favorita y probablemente la mejor que he probado y está disponible en un plan gratuito con el que no perderemos funcionalidades. Está desarrollada en Rust, lo que ya nos adelanta que es muy rápida, además de tener un diseño muy cuidado y ser muy sencilla de utilizar.
 
@@ -32,7 +32,7 @@ Como véis, es una terminal con muchísimas posibilidades.
 
 ## 2. [Hoppscotch](https://hoppscotch.com/)
 
-![Hoppscotch](../../assets/images/aplicaciones-macos-2024/Hoppscotch.avif)
+![Hoppscotch](/aplicaciones-macos-2024/Hoppscotch.avif)
 
 Hoppscotch es en mi opinión, la mejor alternativa a Postman. Es una herramienta gratuita y de código abierto diseñada para realizar pruebas de API de manera eficaz.
 
@@ -44,7 +44,7 @@ Hoppscotch está disponible en su versión web y como una Progressive Web App (P
 
 ## 3. [Pika](https://superhighfives.com/pika)
 
-![Pika](../../assets/images/aplicaciones-macos-2024/Pika.avif)
+![Pika](/aplicaciones-macos-2024/Pika.avif)
 
 Pika es la mejor herramienta de selección de colores que he probado. Nativa, fácil de usar, de código abierto y funciona con un atajo de teclado.
 
@@ -56,7 +56,7 @@ Además, Pika ofrece una variedad de formatos de color populares, como hex, RGB,
 
 ## 4. [Arc Browser](https://arc.net/gift/cce84c0b)
 
-![Arc Browser](../../assets/images/aplicaciones-macos-2024/Arc.avif)
+![Arc Browser](/aplicaciones-macos-2024/Arc.avif)
 
 Arc se ha convertido en mi navegador por defecto, algo que no esperaba cambiar. Está basado en Chrome, por lo que en temas de compatibilidad no tiene ningún tipo de problema. Pero junto a esto, nos encontramos con un navegador con un diseño excepcional y útil como pocos.
 
