--- a/src/content/blog/futuro-del-ecommerce.mdx
+++ b/src/content/blog/futuro-del-ecommerce.mdx
@@ -5,7 +5,7 @@ description: 'En este artículo exploramos las tendencias futuras del comercio e
 contentType: 'opinion'
 author: 'Aaron'
 image:
-  url: '../../assets/images/futuro-del-ecommerce/Hero.webp'
+  url: '/futuro-del-ecommerce/Hero.webp'
   alt: 'Banner del futuro del eCommerce'
 tags: ['eCommerce', 'IA', 'Marketing']
 ---
@@ -20,7 +20,7 @@ Debemos ser conscientes de un hecho que hemos observado durante mucho tiempo: nu
 
 Estos comportamientos serán cada vez más analizados en los sitios web de comercio electrónico mediante inteligencia artificial con el objetivo de mostrar los productos más relevantes para cada tipo de cliente. Esto mejora la experiencia del cliente y optimiza el tiempo que pasa en el sitio web.
 
-![Ejemplo de recomendación de ChatGPT](../../assets/images/futuro-del-ecommerce/ParaTi.webp)
+![Ejemplo de recomendación de ChatGPT](/futuro-del-ecommerce/ParaTi.webp)
 Sin embargo, la experiencia personalizada va más allá; todos los datos de comportamiento recopilados de cada cliente permitirán crear un escenario que acerque a clientes y marcas. Este escenario implica comunicaciones con el tono, imágenes y promociones adecuadas en el momento correcto, así como marketing personalizado en redes sociales, entre otras acciones que parecen conocer a cada cliente y crearán situaciones propicias para el tráfico y la conversión.
 
 Por último, para cerrar el círculo de la experiencia de compra perfecta, está la atención al cliente. No sorprenderá a nadie cuando diga que para este punto la solución son los ChatBots como ChatGPT, herramientas de inteligencia artificial que aprovecharán todos los datos recogidos hasta el momento para tratar al cliente de la mejor forma posible, conociendo sus gustos y necesidades a la perfección. Esto acercará la experiencia que antes solo el lujo podía ofrecer a la gran mayoría de tiendas en línea.
@@ -33,7 +33,7 @@ Cada vez utilizamos más estas herramientas para informarnos como lo haríamos t
 
 Como veréis en la siguiente captura de pantalla, ChatGPT no tiene reparo en recomendar marcas:
 
-![Ejemplo de recomendación de ChatGPT](../../assets/images/futuro-del-ecommerce/ChatGPT.webp)
+![Ejemplo de recomendación de ChatGPT](/futuro-del-ecommerce/ChatGPT.webp)
 
 Esto me hace pensar en las posibilidades a futuro, donde no dudo que se creen estándares de indexación para LLM's, el SEO de los ChatBots, que permitirá aparecer en las respuestas como sus primeras opciones, incluso, planearía la posibilidad de que existan servicios como Google Ads para aparecer los primeros en las respuestas de estas herramientas.
 
