--- a/src/content/blog/os-estan-tomando-el-pelo.mdx
+++ b/src/content/blog/os-estan-tomando-el-pelo.mdx
@@ -5,7 +5,7 @@ description: 'Las malas experiencias con agencias poco competentes pueden genera
 contentType: 'opinion'
 author: 'Aaron'
 image:
-  url: '../../assets/images/os-estan-tomando-el-pelo/Hero.webp'
+  url: '/os-estan-tomando-el-pelo/Hero.webp'
   alt: 'Banner del post'
 tags: ['eCommerce', 'Agencias', 'Marketing', 'Desarrollo web']
 ---
@@ -20,9 +20,9 @@ Muestra de ello es que muchas de estas agencias tienen puntuaciones absurdamente
 
 Aquí os dejo 3 ejemplos de algunas de ellas sin mencionar nombres:
 
-![Agencia 1](../../assets/images/os-estan-tomando-el-pelo/Agencia1.avif)
-![Agencia 2](../../assets/images/os-estan-tomando-el-pelo/Agencia2.avif)
-![Agencia 3](../../assets/images/os-estan-tomando-el-pelo/Agencia3.avif)
+![Agencia 1](/os-estan-tomando-el-pelo/Agencia1.avif)
+![Agencia 2](/os-estan-tomando-el-pelo/Agencia2.avif)
+![Agencia 3](/os-estan-tomando-el-pelo/Agencia3.avif)
 
 Sumado a todo esto están los precios, amenudo abusivos e injustificados de estas agencias, y visto que muchas empresas prefieren subcontratar este tipo de servicios se genera una dinámica de cambio constante de agencias a las que se dedica poco tiempo para estudiar y que saben poco o nada de la marca.
 
