refactor: Update blog page header links for RSS feed and filter functionality

--- a/src/content/blog/aplicaciones-macos-2024.mdx
+++ b/src/content/blog/aplicaciones-macos-2024.mdx
@@ -8,6 +8,7 @@ image:
   url: '/aplicaciones-macos-2024/Hero.avif'
   alt: 'Banner de aplicaciones para macOS'
 tags: ['eCommerce', 'IA', 'Marketing']
+fixed: false
 ---
 
 Como muchos desarrolladores mis inicios en la programación fueron con Windows y posteriormente con Linux, hasta hace poco esto seguía siendo así, pero tras pensarlo detenidamente y cansado del ruido que hacía mi portátil me lancé a comprar un Mac Mini.
