--- a/src/content/blog/explorando-astrodb.mdx
+++ b/src/content/blog/explorando-astrodb.mdx
@@ -8,6 +8,7 @@ image:
   url: '/explorando-astrodb/Hero.webp'
   alt: 'Banner del artículo Exlorando Astro DB'
 tags: ['Astro', 'DB', 'Desarrollo web']
+fixed: true
 ---
 
 Hace escasos días Astro presentó Astro DB, una nueva solución de base de datos para el framework Astro y que hoy estaremos explorando.
