--- a/src/content/blog/futuro-del-ecommerce.mdx
+++ b/src/content/blog/futuro-del-ecommerce.mdx
@@ -8,6 +8,7 @@ image:
   url: '/futuro-del-ecommerce/Hero.webp'
   alt: 'Banner del futuro del eCommerce'
 tags: ['eCommerce', 'IA', 'Marketing']
+fixed: false
 ---
 
 El eCommerce ha experimentado un crecimiento exponencial en los últimos años, transformando la manera en que compramos y vendemos productos y servicios. En este artículo, exploraremos las tendencias emergentes y las perspectivas futuras del eCommerce, centrándonos en aspectos como la experiencia personalizada, el SEO para LLM's y ChatBots, así como la integración y automatización de procesos. Acompáñanos en este recorrido hacia el futuro del comercio electrónico.
