--- a/src/content/blog/os-estan-tomando-el-pelo.mdx
+++ b/src/content/blog/os-estan-tomando-el-pelo.mdx
@@ -8,6 +8,7 @@ image:
   url: '/os-estan-tomando-el-pelo/Hero.webp'
   alt: 'Banner del post'
 tags: ['eCommerce', 'Agencias', 'Marketing', 'Desarrollo web']
+fixed: false
 ---
 
 Y lo peor es que muchos ni siquiera se dan cuenta. En el momento en el que estamos, donde la presencia digital es crucial para el éxito de cualquier negocio, es alarmante ver cómo proliferan empresas consultoras de IT, eCommerce y marketing digital que parecen haberse lanzado al mercado sin entender ni siquiera los conceptos básicos de a lo que se dedican.
